--- a/Languages of the Sword Coast/Mods/ComprehendLanguages/Localization/English/english.xml
+++ b/Languages of the Sword Coast/Mods/ComprehendLanguages/Localization/English/english.xml
@@ -81,4 +81,6 @@
   <content contentuid="h14757482g6881g42f4g878eg55d7b2bdfeb9" version="1">Has &lt;LSTag Tooltip="Advantage"&gt;Advantage&lt;/LSTag&gt; on Speech &lt;LSTag Tooltip="AbilityCheck"&gt;Checks&lt;/LSTag&gt; directed at the target creature in their native tongue.</content>
   <content contentuid="h1a5dae88gceaag4ce1gaf8fg1f622368aba9" version="1">Infernal</content>
   <content contentuid="h8838d562g8682g4557gab75g73383f7f6ab2" version="1">Infernal is the devilish language of the Nine Hells. Spoken primarily by devils, it has also been passed down to the Hells-touched races of tieflings and fiend pact-bound warlocks.</content>
+  <content contentuid="h9686288cge2a1g4883g9c32g83333a77e46d" version="1">Infernal</content>
+  <content contentuid="h0500664cg4fd1g4a7eg8d7eg2264f5a53861" version="1">Infernal is the devilish language of the Nine Hells. Spoken primarily by devils, it has also been passed down to the Hells-touched races of tieflings and fiend pact-bound warlocks.</content>
 </contentList>
