--- a/Languages of the Sword Coast - All Skills/Mods/ComprehendLanguages/Localization/English/english.xml
+++ b/Languages of the Sword Coast - All Skills/Mods/ComprehendLanguages/Localization/English/english.xml
@@ -83,4 +83,6 @@
   <content contentuid="h8838d562g8682g4557gab75g73383f7f6ab2" version="1">Infernal is the devilish language of the Nine Hells. Spoken primarily by devils, it has also been passed down to the Hells-touched races of tieflings and fiend pact-bound warlocks.</content>
   <content contentuid="h9686288cge2a1g4883g9c32g83333a77e46d" version="1">Infernal</content>
   <content contentuid="h0500664cg4fd1g4a7eg8d7eg2264f5a53861" version="1">Infernal is the devilish language of the Nine Hells. Spoken primarily by devils, it has also been passed down to the Hells-touched races of tieflings and fiend pact-bound warlocks.</content>
+  <content contentuid="h33d361cegb233g4608g981fg9a8ce985d5f5" version="1">Thieves' Cant</content>
+  <content contentuid="h018ca040ga024g42ddg91e3g410fc8afd2ba" version="1">During your rogue training you learned thieves' cant, a secret mix of dialect, jargon, and code that allows you to hide messages in seemingly normal conversation. Only another creature that knows thieves' cant understands such messages. In addition, you understand a set of secret signs and symbols used to convey short, simple messages, such as whether an area is dangerous or the territory of a thieves' guild, whether loot is nearby, or whether the people in an area are easy marks or will provide a safe house for thieves on the run.</content>
 </contentList>
