--- a/Deity Expansion (No Domain Alignment)/Mods/DeityExpansion/Localization/English/english.xml
+++ b/Deity Expansion (No Domain Alignment)/Mods/DeityExpansion/Localization/English/english.xml
@@ -237,4 +237,20 @@
 	<content contentuid="h216225afgea1eg4481gbf19gb98142c90747" version="1">Paladin of Thrym</content>
 	<content contentuid="h03112ec7g1cbag4832gb289ge082130875b3" version="1">De facto leader of the Frost Giants, Thrym is a powerful titan who delighted in war. He is worshiped by the frost giants as the giant god of cold and ice.</content>
 	<content contentuid="h60cc54f6gb7d2g4d26gaa66g0ca1f10126ae" version="1">De facto leader of the Frost Giants, Thrym is a powerful titan who delighted in war. He is worshiped by the frost giants as the giant god of cold and ice.</content>
+	<content contentuid="h1a565f71g3c48g4424ga11dg6ab6b830ac8a" version="1">Amaunator</content>
+	<content contentuid="h4f0f8a09g6eecg4905g8779g150c9c62101a" version="1">Paladin of Amaunator</content>
+	<content contentuid="h7a915a52ga6deg49b2gb4e4g19194f8b206c" version="1">Amaunator is the Faerûnian god of the sun and law. Amaunator was also worshiped in the ancient Netherese empire as the solar deity. Once thought long-dormant and supplanted by Lathander, he is worshiped in present day under his own name.</content>
+	<content contentuid="h17dd7527g319bg41d5gbab4g2f4600d6e8e9" version="1">Amaunator is the Faerûnian god of the sun and law. Amaunator was also worshiped in the ancient Netherese empire as the solar deity. Once thought long-dormant and supplanted by Lathander, he is worshiped in present day under his own name.</content>
+	<content contentuid="h6bee3de5g11edg4d08g99abg0df2f2d0b2f9" version="1">Red Knight</content>
+	<content contentuid="h05a16defgdadfg4277gb8d8g683d9aff9963" version="1">Paladin of the Red Knight</content>
+	<content contentuid="h464c9a5cg4f78g40bdgbb2fgc581ca130712" version="1">The Red Knight is the god of strategy and battle tactics and serves as an exarch of Tempus. Appearing in blood-red plate mail, she had a commanding presence that drew attention and respect of all who bore witness.</content>
+	<content contentuid="h5e8a51d0g68c4g4dcbg8649g099a7c2829ff" version="1">The Red Knight is the god of strategy and battle tactics and serves as an exarch of Tempus. Appearing in blood-red plate mail, she had a commanding presence that drew attention and respect of all who bore witness.</content>
+	<content contentuid="h3f06c991gecfeg40e0g84d4gadbd8f98b798" version="1">Sharess</content>
+	<content contentuid="h0636d34egc499g4f76ga998ge2eeb904fb9b" version="1">Paladin of Sharess</content>
+	<content contentuid="hf3b73de4g7757g4fc4ga4e3g7b7668303954" version="1">Sharess is the goddess of hedonism, lust, and sensual fulfillment and is known as Bast in the Mulhorandi pantheon. Her clergy are commonly seen running festhalls throughout Faerûn, places that indulge every pleasure imaginable.</content>
+	<content contentuid="h786b56a2gf8f2g4066g8ec7g1f396bebf1b1" version="1">Sharess is the goddess of hedonism, lust, and sensual fulfillment and is known as Bast in the Mulhorandi pantheon. Her clergy are commonly seen running festhalls throughout Faerûn, places that indulge every pleasure imaginable.</content>
+	<content contentuid="he6b91978ge929g46cag87cdge79b8fa1879b" version="1">Shaundakul</content>
+	<content contentuid="h56fff900g3a0eg4750g9bc9g6926c666f76b" version="1">Paladin of Shaundakul</content>
+	<content contentuid="h6872706bg2c6eg4793g8e54gc9343ba50471" version="1">Shaundakul is a lesser deity of travel, exploration, and portals. He has a small, but dedicated, clergy who maintain a few temples throughout the world. He is known to appear before his worshipers or those in desperate need of help, in an effort to grow his mortal flock.</content>
+	<content contentuid="haf6f5266ge69dg445cg8842g4fe66ef2a218" version="1">Shaundakul is a lesser deity of travel, exploration, and portals. He has a small, but dedicated, clergy who maintain a few temples throughout the world. He is known to appear before his worshipers or those in desperate need of help, in an effort to grow his mortal flock.</content>
 </contentList>
