--- a/Languages of the Sword Coast - Social Skills/Mods/CompLangSocialSkills/Localization/English/english.xml
+++ b/Languages of the Sword Coast - Social Skills/Mods/CompLangSocialSkills/Localization/English/english.xml
@@ -39,6 +39,8 @@
   <content contentuid="h18560c8cce3845708db2046c0fafc154d378" version="1">You speak Sylvan, the language of creatures of the Feywild.</content>
   <content contentuid="h5c7d6ece3ec3452bb5bec5709104ca16245f" version="1">Language: Undercommon</content>
   <content contentuid="hace3742e19a343b88d0f6ef02853204e9f7a" version="1">You speak Undercommon, the language of the Underdark.</content>
+  <content contentuid="hbb8e28f31a2248888b72abb81361bbc5ebd4" version="1">Language: Thieves' Cant</content>
+  <content contentuid="h1c29b614241b401f8753cefccfcaba267bff" version="1">You can speak Thieves' Cant, the secret language of rogues.</content>
   <content contentuid="hed92405c99f54b07bf0571aeaf454dccc61a" version="1">Draconic</content>
   <content contentuid="h0855db0d757648848aaa30189708a171gefe" version="1">You speak Draconic, the language of dragons, kobolds, and dragonborn.</content>
   <content contentuid="h3f9291d951194973b61611d5f4d002fe41c5" version="1">Dwarvish</content>
